# django-file-processing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
config/nginx/: app.conf
file_uploader/: .coveragerc
file_uploader/file_uploader/: celery.py  settings.py  urls.py
file_uploader/processor/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
file_uploader/processor/migrations/: 0001_initial.py
file_uploader/processor/tests/: conftest.py  test_api.py  test_models.py  test_processors.py
