[tool.poetry]
name = "django-file-processing"
version = "0.1.0"
description = ""
authors = ["Nyaaa <1457047+Nyaaa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"
djangorestframework = "^3.14.0"
celery = {version = "^5.3.6", extras = ["redis"]}
drf-spectacular = "^0.27.1"
flower = "^2.0.1"
gunicorn = "^21.2.0"
identify = "^2.5.33"
psycopg = {extras = ["binary"], version = "^3.1.17"}

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8.0"
pytest-cov = "^4.1.0"
locust = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "file_uploader.settings_test"
addopts = '--nomigrations --cov . --cov-report html'

[tool.ruff]
line-length = 119
exclude = ['*/migrations/*']
select = ['E', 'F', 'UP', 'NPY', 'SIM', 'ICN', 'C4', 'A', 'B', 'N', 'I', 'Q', 'DJ',
    'W', 'PL', 'RET', 'RUF', 'PERF', 'PIE', 'ARG', 'PTH', 'PD', 'PGH', 'TRY']
ignore = ['TRY003', 'ARG002', 'RUF012']

[tool.ruff.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'
